--- a/System/templates/index.html
+++ b/System/templates/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>WELCOME TO THE INDEX PAGE</title>
-</head>
-<body>
-<h1>WELCOME TO THE HOME PAGE</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<br><br>
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+<div class="jumbotron">
+<h3> Welcome </h3>
+</div>
+{% endblock %}
