--- a/System/templates/index.html
+++ b/System/templates/index.html
@@ -1,16 +1,30 @@
 {% extends "base.html" %}
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='chatbot.css') }}">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="{{ url_for('static', filename='chatbot.js') }}"></script>
+{% endblock %}
+
 {% block content %}
-<br><br>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-<div class="jumbotron">
-<h3> Welcome </h3>
-</div>
+    <br><br>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+    <div class="jumbotron">
+        <h3> Welcome </h3>
+    </div>
+    <div id="chat-container">
+        <!-- Chat messages will be appended here -->
+    </div>
+    <form id="message-form">
+    <input type="text" id="message-input" placeholder="Type your message...">
+    <input type="hidden" name="user_id" value="{{ current_user.id }}">
+    <button id="submit-button">Send</button>
+    </form>
 {% endblock %}
