--- a/System/static/css/movie_submitted.css
+++ b/System/static/css/movie_submitted.css
@@ -18,7 +18,7 @@ table {
 }
 
 .table-wrapper {
-  padding-top: 50px; /* Adjust this value according to your needs */
+  padding-top: 50px;
 }
 
 body, html {
