--- a/System/templates/movie_submitted.html
+++ b/System/templates/movie_submitted.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="table-wrapper">
     <h1 class="title"> <b> Movie Submissions</b></h1>
-    <input type="text" id="searchInput" placeholder="Search by approval status..."> <!-- Move the search input here -->
+    <input type="text" id="searchInput" placeholder="Search by approval status...">
     <div class="table-container">
         <table>
             <thead>
